--- a/src/app/components/forms/change-form/change-form.component.html
+++ b/src/app/components/forms/change-form/change-form.component.html
@@ -55,12 +55,14 @@
     >
       Phone number
     </label>
+
     <input
       class="input"
-      autocomplete="family-name"
+      autocomplete="tel"
       formControlName="phone"
       placeholder="+373********"
       type="tel"
+      appMask
       id="phone"
     />
   </div>
