--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,13 @@
 <header class="p-4">
   <div class="flex px-4 py-2 bg-slate-200 rounded-lg justify-between items-center">
     <a routerLink="" class="max-w-16 max-h-16 overflow-hidden rounded-full">
-      <img src="https://www.gravatar.com/avatar/" alt="" />
+      <img src="https://www.gravatar.com/avatar/" alt="logo" />
     </a>
 
     <nav class="flex items-center gap-6">
       <ul class="flex items-center gap-8">
         <li>
-          <a routerLink="/home" routerLinkActive="text-blue-600" [routerLinkActiveOptions]="{ exact: true }">
-            Homepage
-          </a>
+          <a routerLink="" routerLinkActive="text-blue-600" [routerLinkActiveOptions]="{ exact: true }"> Homepage </a>
         </li>
         <li><a routerLink="/shop" routerLinkActive="text-blue-600">Shop</a></li>
         @if (authService.loggedIn()) { @if (authService.isAdmin()) {
@@ -18,7 +16,7 @@
         <li><a routerLink="/profile" routerLinkActive="text-blue-600">Profile</a></li>
         }@else {
         <li>
-          <a routerLink="" class="button button__primary">Log In</a>
+          <a routerLink="/login" class="button button__primary">Log In</a>
         </li>
         }
       </ul>
